--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,27 @@
-# Essential Flask dependencies only
+# Web framework
 Flask==3.0.0
 Flask-CORS==4.0.0
-Werkzeug==3.0.1
 gunicorn==21.2.0
 
-# Optional: If you want to add database functionality later
-# psycopg2-binary==2.9.9
-# python-dotenv==1.0.0
+# Database
+psycopg2-binary==2.9.9
+
+# Data processing
+pandas==2.1.3
+numpy==1.24.3
+
+# Visualization
+matplotlib==3.8.2
+seaborn==0.13.0
+
+# AI/ML
+google-generativeai==0.3.2
+
+# Audio processing (optional, might not work on Railway)
+# SpeechRecognition==3.10.0
+
+# Text processing
+pyspellchecker==0.7.2
+
+# Environment variables
+python-dotenv==1.0.0
