--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,11 +17,14 @@ seaborn==0.13.0
 # AI/ML
 google-generativeai==0.3.2
 
-# Audio processing (optional, might not work on Railway)
-# SpeechRecognition==3.10.0
+# Audio processing
+SpeechRecognition==3.10.0
 
 # Text processing
 pyspellchecker==0.7.2
 
-# Environment variables
+# Environment
 python-dotenv==1.0.0
+
+# Utilities
+Pillow==10.1.0
