--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,3 +28,8 @@ python-dotenv==1.0.0
 
 # Utilities
 Pillow==10.1.0
+
+# Facial Recognition
+face-recognition==1.3.0
+opencv-python-headless==4.8.1.78
+dlib==19.24.2
