--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,7 +29,6 @@ python-dotenv==1.0.0
 # Utilities
 Pillow==10.1.0
 
-# Facial Recognition
+# Facial Recognition (smooth install)
 face-recognition==1.3.0
-opencv-python-headless==4.8.1.78
-dlib==19.24.2
+cmake==3.25.0
