--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ python-dotenv==1.0.0
 # Utilities
 Pillow==10.1.0
 
-# Facial Recognition (smooth install)
+# Add these lines to your requirements.txt:
 face-recognition==1.3.0
+opencv-python-headless==4.8.1.78
 cmake==3.25.0
