--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,7 +29,7 @@ python-dotenv==1.0.0
 # Utilities
 Pillow==10.1.0
 
-# Add these lines to your requirements.txt:
+# Facial Recognition (headless server compatible)
 face-recognition==1.3.0
-opencv-python-headless==4.8.1.78
+opencv-python-headless==4.5.5.64
 cmake==3.25.0
