--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,5 +29,6 @@ python-dotenv==1.0.0
 # Utilities
 Pillow==10.1.0
 
-# Facial recognition - try alternative approach
-opencv-python-headless==4.8.1.78
+# Image processing - more reliable on Railway
+opencv-python-headless==4.9.0.80
+scikit-image==0.22.0
