--- a/Neural Pulse/pubspec.yaml
+++ b/Neural Pulse/pubspec.yaml
@@ -1,7 +1,6 @@
 name: neural_pulse
 description: "Neural Pulse - AI Database Assistant"
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
@@ -12,9 +11,13 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   http: ^1.1.0
-  camera: ^0.10.5+5
   permission_handler: ^11.0.1
   cookie_jar: ^4.0.8
+  local_auth: ^2.1.6
+  flutter_secure_storage: ^9.0.0
+  image_picker: ^1.0.4  # New: For camera and gallery access
+  aws_rekognition_api: ^1.0.0  # New: For face recognition
+  crypto: ^3.0.3  # New: For generating secure hashes
 
 dev_dependencies:
   flutter_test:
@@ -24,7 +27,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
   assets:
     - assets/images/
 
