--- a/Neural Pulse/pubspec.yaml
+++ b/Neural Pulse/pubspec.yaml
@@ -15,15 +15,19 @@ dependencies:
   cookie_jar: ^4.0.8
   local_auth: ^2.1.6
   flutter_secure_storage: ^9.0.0
-  image_picker: ^1.0.4  # New: For camera and gallery access
-  aws_rekognition_api: ^1.0.0  # New: For face recognition
-  crypto: ^3.0.3  # New: For generating secure hashes
+  image_picker: ^1.0.4
+  google_mlkit_face_detection: ^0.10.0  # Google ML Kit for face detection
+  crypto: ^3.0.3
 
-dev_dependencies:
-  flutter_test:
+dependencies:
+  flutter:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  flutter_launcher_icons: ^0.13.1
+  http: ^1.1.0
+  local_auth: ^2.1.6
+  flutter_secure_storage: ^9.0.0
+  image_picker: ^1.0.4
+  permission_handler: ^11.0.1
+  google_mlkit_face_detection: ^0.9.0
 
 flutter:
   uses-material-design: true
