--- a/neural_pulse/pubspec.yaml
+++ b/neural_pulse/pubspec.yaml
@@ -10,12 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
   http: ^1.1.0
-  camera: ^0.10.5+5
-  permission_handler: ^11.0.1
-  cookie_jar: ^4.0.8
-
+  local_auth: ^2.1.8
+  flutter_secure_storage: ^9.2.2
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
+  google_mlkit_face_detection: ^0.10.0
+  
 flutter:
   uses-material-design: true
   
